samples/_failures_safe/1761642012_112c1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_160fe42d.c: In function ‘main’:
./samples/SAFE/__tmp_160fe42d.c:162:5: error: expected expression at end of input
  162 |     if (strlen(input) ==
      |     ^~
./samples/SAFE/__tmp_160fe42d.c:162:5: error: expected declaration or statement at end of input
